--- a/templates/base.html
+++ b/templates/base.html
@@ -68,7 +68,8 @@
 </head>
 
 <body>
-
+  <script src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php/en_US" type="text/javascript"></script><script
+  type="text/javascript">FB.init("c1f0e482a2f5715875a81406433be241");</script>
   <div class="container">
     
     <hr/>
@@ -111,7 +112,6 @@
     <br />
     <hr />
     <br />
-    <div class="span-24"><center><!-- Facebook Badge START --><a href="http://www.facebook.com/pages/San-Francisco-CA/Jacey-Photographs/208020780557" title="Jacey Photographs" target="_TOP" style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; font-variant: normal; font-style: normal; font-weight: normal; color: #3B5998; text-decoration: none;">Jacey Photographs | Become a Fan</a><span style="font-family: &quot;lucida grande&quot;,tahoma,verdana,arial,sans-serif; font-size: 11px; line-height: 16px; font-variant: normal; font-style: normal; font-weight: normal; color: #555555; text-decoration: none;">&nbsp;</span><br/><a href="http://www.facebook.com/pages/San-Francisco-CA/Jacey-Photographs/208020780557" title="Jacey Photographs" target="_TOP"><img src="http://badge.facebook.com/badge/208020780557.3212.1470396114.png" width="137" height="84" style="border: 0px;" /></a><!-- Facebook Badge END --></center></div>
     <!--<div class="span-12"><h4 class="alt">A Website by the URL Whisperer</h4></div>
     <div class="span-12 last" style="text-align:right;"><a class="link" href="/post/entry">Admin</a></div>
     <div class="span-12 style="text-align:left;"><img src="http://code.google.com/appengine/images/appengine-noborder-120x30.gif"
