--- a/templates/base_contact.html
+++ b/templates/base_contact.html
@@ -5,23 +5,23 @@
 {% block post %}
 
 <div class="24"> 
-	<div class="span-11 colborder" style="text-align:center"><br><h3><span class="alt">jacey@jaceyphotographs.com</span> | 415.347.6259<br><h4><a href="http://www.facebook.com/pages/San-Francisco-CA/Jacey-Photographs/208020780557" class="tag">Facebook</a> | <a href="http://www.twitter.com/jaceyphotos" class="tag">Twitter</a></h4></div> 
+	<div class="span-11 colborder" style="text-align:center"><br><br><h3><span class="alt">jacey@jaceyphotographs.com</span> | 415.347.6259</h3></div>
 	<div class="span-12 last" style="text-align:center"><object type="application/x-shockwave-flash"
-data="https://clients4.google.com/voice/embed/webCallButton" width="230" height="85"><param name="movie" value="https://clients4.google.com/voice/embed/webCallButton" /><param name="wmode"
-value="transparent" /><param name="FlashVars" value="id=0eab9ccacbf71fadb7a6ed923f7de95dc6dfbf51&style=0" /></object><br><br>&nbsp;</div> 
+	data="https://clients4.google.com/voice/embed/webCallButton" width="230" height="85"><param name="movie" value="https://clients4.google.com/voice/embed/webCallButton" /><param name="wmode"
+	value="transparent" /><param name="FlashVars" value="id=0eab9ccacbf71fadb7a6ed923f7de95dc6dfbf51&style=0" /></object><br><br>&nbsp;</div>
 </div>
 
 <hr>
 
 <div class="24">
 
-<div class="span-11 colborder" style="text-align:center"><script type="text/javascript" src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php/en_US"></script><script
+<div class="span-24" style="text-align:center"><script type="text/javascript" src="http://static.ak.connect.facebook.com/js/api_lib/v0.4/FeatureLoader.js.php/en_US"></script><script
 type="text/javascript">FB.init("2864761bde7ec0ba2a687345a0ea8714");</script><fb:fan profile_id="208020780557" stream="" connections="10" width="300"></fb:fan><div style="font-size:8px;
 padding-left:10px"></div> </div>
 
 </div>
 
-<div class="span-12 last"> <form method="post" action="{% url jaceyphotographs.views.email_jacey %}">
+<!--><div class="span-12 last"> <form method="post" action="{% url jaceyphotographs.views.email_jacey %}">
 
 <fieldset> <legend>Shoot me an email!</legend>
 
@@ -43,4 +43,4 @@ rows="5" cols="80"></textarea></p>
 
 </form> 
 
-</div> {% endblock %}
+</div>--> {% endblock %}
