Sync'ing to head; making a small CSS change.

--- a/templates/base.html
+++ b/templates/base.html
@@ -74,7 +74,7 @@
     
     <hr/>
         
-    <div class="span-24 last" style="text-align:center">
+    <div class="span-24" style="text-align:center">
       <a href="/"><img class="logo" src="/images/logo.png"></a>
     </div>
     
@@ -93,7 +93,7 @@
 	<hr/>
     
     <div class="span-24" colborder>	  
-	  <hr/>
+	  <img align="center" class="blog_photo_image" src="/images/zenlandscape.jpg" width="950" height="150">
     </div>
     
     <div class="span-24 colborder">
