Temporary remove landscape photo from base.

--- a/templates/base.html
+++ b/templates/base.html
@@ -92,9 +92,9 @@
 	 
 	<hr/>
     
-    <div class="span-24" colborder>	  
+    <!--><div class="span-24" colborder>	  
 	  <img align="center" class="blog_photo_image" src="/images/zenlandscape.jpg" width="950" height="150">
-    </div>
+    </div>-->
     
     <div class="span-24 colborder">
 
